
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2020 JUN 25a
  * in model/chem/_CO2_Plasma_23s_Park/doc/Makefile and model/chem/_Cs_Air_Plasma_13s_Lenard/doc/Makefile
    - fixed a bug within the make clean
  * in model/chem/_Cs_Air_Plasma_13s_Lenard/chem.c
    - added loops within reactions in which M1, M2, etc appeared to shorten the code
    - added Townsend ionization of NO+
  * in model/chem/_Cs_Air_Plasma_13s_Lenard/doc/report.tex
    - added Townsend ionization of NO+
    - added figure 1 comparing NO+ Townsend ionization curve fit to BOLSIG+ data
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c and model/fluid/_Favre-Reynolds_plasma/fluid_source.c
    - in find_dSemfield_dU(), changed spec loops from 1..ns to 1..ncs where  


2020 JUN 24a
  * moved
    - _Cs_Air_Plasma to _Cs_Air_Plasma_13s_Lenard
  * in model/chem/_Cs_Air_Plasma_13s_Lenard/chem.c
    - added most of the chemical reactions (except for townsend ionization of NO+)
  * in model/chem
    - added _CO2_Plasma_23s_Park (with the templates taken from _Cs_Air_Plasma_13s_Lenard)
  * in model/share/chem_share.c
    - fixed units of kf (error was within comments, does not affect the code)
    - added _kf_Arrhenius()
    - added _dkfdT_Arrhenius()
  * in model/share/chem_share.h
    - added comments for the units of the various parameters 
  * in model/thermo/_generic/thermo.c
    - added 10 new species for the Mars atmosphere (Aaron Trinh)
    

2020 JUN 21a
  * in model/chem
    - added _Cs_Air_Plasma
  * in src/post.c
    - in read_post_actions(), added code to get rid of memory check error reports but
      kept the code commented out (not yet tested sufficiently)
  * renamed
    - _CHEM_SET_TE_TO_T_FOR_ARRHENIUS_REACTIONS to _CHEM_SET_TE_TO_T_FOR_FWBW_REACTIONS