@@ -1,0 +1,3 @@
+#!/bin/sh
+gcc -Wall -O4 townsend.c -lm -o townsend
+./townsend
